Documentation about Decay Process

--- a/Project/graph_decay.ipynb
+++ b/Project/graph_decay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "c0729d20",
    "metadata": {},
    "outputs": [
@@ -15,13 +15,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: c\n"
-     ]
     }
    ],
    "source": [
@@ -43,8 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d4303a55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error in <TFile::Init>: population.txt not a ROOT file\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    ROOT::EnableImplicitMT(); // Tell ROOT you want to go parallel\n",
+    "    ROOT::RDataFrame d(\"myTree\", \"population.txt\"); // Interface to TTree and TChain\n",
+    "    auto myHisto = d.Histo1D(\"Branch_A\"); // This books the (lazy) filling of a histogram\n",
+    "    myHisto->Draw(); // Event loop is run here, upon first access to a result\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff4f6f1",
    "metadata": {},
    "outputs": [],
    "source": []
